# Slim-Engine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
Applications/: CMakeLists.txt
Applications/Basic/: Time.h  example.cpp
Applications/Basic/shaders/: compute.comp  textured_fragment.frag
Applications/GLTFViewer/: CMakeLists.txt  config.h  gizmo.h  main.cpp  material.cpp  material.h  model.cpp  model.h  skybox.h  viewer.cpp  viewer.h
Applications/GLTFViewer/shaders/: gizmo.frag  gizmo.vert  gltf.frag  gltf.vert  simple.vert  skybox.frag  skybox.vert
CMake/: Compiler.cmake  GLSL.cmake  HLSL.cmake  Project.cmake
Dependencies/: CMakeLists.txt
Examples/: CMakeLists.txt
Examples/Bindless/: CMakeLists.txt  main.cpp
Examples/Bindless/shaders/: simple.frag  simple.vert
Examples/BufferCopy/: CMakeLists.txt  main.cpp
Examples/Compute/: CMakeLists.txt  compute.cpp  main.cpp
Examples/Compute/shaders/: simple.comp
Examples/DearImGui/: CMakeLists.txt  dearimgui.cpp  main.cpp
Examples/Deferred/: CMakeLists.txt  fairy.h  main.cpp  scene.h
Examples/Deferred/shaders/: fairy.frag  fairy.vert  fairylight.frag  fairylight.vert  fairymask.vert  gbuffer.frag  gbuffer.vert
Examples/DepthBuffering/: CMakeLists.txt  depthbuffering.cpp  main.cpp
Examples/DescriptorIndexing/: CMakeLists.txt  main.cpp
Examples/DescriptorIndexing/shaders/: simple.vert
Examples/DynamicUniform/: CMakeLists.txt  main.cpp
Examples/DynamicUniform/shaders/: simple.vert
Examples/Geometries/: CMakeLists.txt  main.cpp
Examples/Geometries/shaders/: simple.frag  simple.vert
Examples/Hemisphere/: CMakeLists.txt  main.cpp
Examples/Hemisphere/shaders/: direction.frag  direction.vert  generate.comp
Examples/Hybrid/: CMakeLists.txt  composer.cpp  composer.h  config.h  gbuffer.cpp  gbuffer.h  light.h  main.cpp  overlay.cpp  overlay.h  raytrace.cpp  raytrace.h  scene.cpp  scene.h
Examples/Hybrid/shaders/: compose.frag  gbuffer.vert  shadow.rgen  shadow.rmiss
Examples/MatCap/: CMakeLists.txt  main.cpp
Examples/MatCap/shaders/: matcap.frag  matcap.vert
Examples/Multisampling/: CMakeLists.txt  main.cpp  multisampling.cpp
Examples/Noise/: CMakeLists.txt  main.cpp
Examples/Noise/shaders/: noise.hlsl  perlin.hlsli  simplex.hlsli  value.hlsli  voronoi.hlsli  white.hlsli
Examples/OctMap/: CMakeLists.txt  main.cpp
Examples/OctMap/shaders/: decode_hemioct.frag  decode_hemioct.vert
Examples/RayTracing/: CMakeLists.txt  main.cpp
Examples/RayTracing/shaders/: post.frag  post.vert  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss
Examples/RenderToTexture/: CMakeLists.txt  main.cpp
Examples/RenderToTexture/shaders/: simple.vert
Examples/SceneGraph/: CMakeLists.txt  helper.h  main.cpp
Examples/SceneGraph/shaders/: simple.frag  simple.vert
Examples/Skybox/: CMakeLists.txt  main.cpp
Examples/Skybox/shaders/: common.vert  reflect.frag  refract.frag  skybox.frag  skybox.vert
Examples/SurfelGI/: CMakeLists.txt  compose.cpp  compose.h  composer.cpp  composer.h  config.h  debug.cpp  debug.h  direct.cpp  direct.h  exposure.h  gbuffer.cpp  gbuffer.h  light.h  main.cpp  overlay.cpp  overlay.h  post.cpp  post.h  raytrace.cpp  raytrace.h  render.h  scene.cpp  scene.h  surfel.cpp  surfel.h  update.cpp  update.h  visualize.cpp  visualize.h
Examples/SurfelGI/shaders/: common.h  compose.frag  compose.vert  fullscreen.vert  gbuffer.frag  gbuffer.vert  halton.h  lighting.h  lineardepth.frag  objectvis.frag  raycommon.h  raytrace.rchit  raytrace.rgen  shadow.rchit  shadow.rmiss  surfel.rchit  surfel.rint  surfel.rmiss  surfelallocvis.frag  surfelbinning.comp  surfelcov.comp  surfelgridoffset.comp  surfelgridreset.comp  surfelgridvis.frag  surfelprepare.comp  surfelupdate.comp  tracing.h
Examples/SurfelGI/shaders/debug/: allocvis.comp  depthvis.comp  geometry.vert  gridvis.comp  light.frag  objectvis.comp  raydir.frag  raydir.vert
Examples/SurfelGI/shaders/gbuffer/: gbuffer.frag  gbuffer.vert
Examples/SurfelGI/shaders/post/: bilateral.frag  bilateral.vert  compose.frag  fullscreen.vert
Examples/SurfelGI/shaders/raytrace/: direct.rgen  ray.rgen  scene.rchit  scene.rmiss  shadow.rahit  shadow.rmiss
Examples/SurfelGI/shaders/surfel/: binning.comp  coverage.comp  offset.comp  prepare.comp  reset.comp  update.comp
Examples/TextureMapping/: CMakeLists.txt  main.cpp  texturemapping.cpp
Examples/TextureMapping/shaders/: textured_fragment.frag  textured_vertex.vert
Examples/Transfer/: transfer.cpp
Tests/: CMakeLists.txt  basics.cpp  common.cpp  common.h  compute.cpp  copy.cpp  graphics.cpp
Tests/shaders/: simple.frag  simple.vert
apps/Basic/: CMakeLists.txt  Time.cpp
apps/Basic/shaders/: simple_vertex.vert  textured_vertex.vert  transform_vertex.vert
examples/Compute/: compute.cpp
examples/Compute/shaders/: compute.comp
examples/Transfer/: CMakeLists.txt
slim/: CMakeLists.txt
slim/core/: buffer.cpp  color.cpp  color.h  commands.cpp  commands.h  context.cpp  dearimgui.cpp  dearimgui.h  framebuffer.cpp  framebuffer.h  hasher.h  renderframe.h  rendergraph.cpp  shader.cpp  synchronization.cpp  vkutils.cpp  vkutils.h  window.cpp
slim/utility/: stb.h
