add_subdirectory(BufferCopy)
add_subdirectory(Compute)
add_subdirectory(DearImGui)
add_subdirectory(DepthBuffering)
add_subdirectory(Multisampling)
add_subdirectory(TextureMapping)
add_subdirectory(RenderToTexture)
add_subdirectory(SceneGraph)
add_subdirectory(DynamicUniform)
add_subdirectory(DescriptorIndexing)
add_subdirectory(Geometries)
add_subdirectory(Skybox)
add_subdirectory(MatCap)

if (WIN32)
    add_subdirectory(RayTracing)
endif (WIN32)
