set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(BufferCopy)
add_subdirectory(Compute)
add_subdirectory(DearImGui)
add_subdirectory(DepthBuffering)
add_subdirectory(Multisampling)
add_subdirectory(TextureMapping)
add_subdirectory(RenderToTexture)
add_subdirectory(SceneGraph)
add_subdirectory(DynamicUniform)
add_subdirectory(DescriptorIndexing)
add_subdirectory(Geometries)
add_subdirectory(Skybox)
add_subdirectory(OctMap)
add_subdirectory(MatCap)
add_subdirectory(Noise)
add_subdirectory(Deferred)
add_subdirectory(Hemisphere)

if (WIN32)
    add_subdirectory(Hybrid)
    add_subdirectory(SurfelGI)
    add_subdirectory(RayTracing)
endif (WIN32)
